<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="about_spaRSS">About Readify</string>
    <string name="welcome_title">Welcome to Readify. Would you like to add one feed?</string>
    <string name="never">never</string>
    <string name="update">Update</string>
    <string name="colon">:\u00A0</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_all_read">Mark all as read</string>
    <string name="error">Error</string>
    <string name="network_error">The network is not set up</string>
    <string name="loading">Loading…</string>
    <string name="no_result">No result</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_finished">Finished</string>
    <string name="action_failed">Failed: %s</string>
    <plurals name="number_of_new_entries">
        <item quantity="one">One New Entry</item>
        <item quantity="other">%d New Entries</item>
    </plurals>
    <string name="feeds">Feeds</string>
    <string name="menu_add_feed">Add feed</string>
    <string name="no_feeds">No feeds</string>
    <string name="no_filters">No rules</string>
    <string name="context_menu_delete">Delete</string>
    <string name="manage_feed_title">Manage feeds</string>
    <string name="manage_group_title">Manage groups</string>
    <string name="new_feed_title">New feed</string>
    <string name="context_menu_edit">Edit</string>
    <string name="popup_menu_read_above">Mark above as read</string>
    <string name="popup_menu_unread_above">Mark above as unread</string>
    <string name="popup_menu_read_below">Mark below as read</string>
    <string name="popup_menu_unread_below">Mark below as unread</string>
    <string name="popup_menu_toggle_read_state">Toggle read state</string>
    <string name="popup_menu_toggle_favorite_state">Toggle favorite state</string>
    <string name="popup_menu_save_cover">Save the cover image</string>
    <string name="menu_add_group">Add group</string>
    <string name="menu_import">Import from OPML</string>
    <string name="menu_export">Export to OPML</string>
    <string name="storage_request_explanation">To be able to import or export the feeds from or to a file, you must allow the application to access to the storage memory.</string>
    <string name="error_feed_error">The feed website is unreachable.</string>
    <string name="error_feed_process">The feed can not be processed.</string>
    <string name="error_feed_url_exists">The address already exists.</string>
    <string name="feed_no_summary">\u003c No summary available. \u003e</string>
    <string name="feed_url">URL or Site name</string>
    <string name="feed_group">Group</string>
    <string name="feed_group_none">None</string>
    <string name="optional">(optional)</string>
    <string name="feed_cookie">Authentication Cookie</string>
    <string name="cookiename">Name</string>
    <string name="cookievalue">Value</string>
    <string name="feed_httpAuth">HTTP Authentication</string>
    <string name="loginhttpAuth">Login</string>
    <string name="passwordhttpAuth">Password</string>
    <string name="set_base_url">Set the page\'s base URL when rendering an entry in a WebView</string>
    <string name="set_referer">Set the Referer when retrieving entry covers</string>
    <string name="fit_center">Set the scale type to FitCenter rather than CenterCrop when displaying entry covers</string>
    <string name="tab_feed_title">Feed</string>
    <string name="tab_filters_title">Filter</string>
    <string name="tab_advanced_title">Advanced</string>
    <string name="feed_title">Title</string>
    <string name="feed_filters">Filter rules</string>
    <string name="filter_add_title">Add rule</string>
    <string name="filter_delete_title">Delete rule</string>
    <string name="filter_help">Filter Help</string>
    <string name="filter_edit_title">Edit rule</string>
    <string name="filter_is_regex">is a regular expression</string>
    <string name="filter_apply_to_title">Apply to title</string>
    <string name="filter_apply_to_content">Apply to content</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="feed_search">Feed search</string>
    <string name="select_file">Select file (SD-root)</string>
    <string name="question_delete_feed">Do you really want to delete this feed?</string>
    <string name="question_delete_group">Do you really want to delete this group and all of its feeds? </string>
    <string name="question_delete_filter">Do you really want to delete this filter?</string>
    <string name="add_group_title">Select group name</string>
    <string name="edit_group_title">Edit group name</string>
    <string name="message_exported_to">Exported into %s.</string>
    <string name="to_group_title">Feed move action</string>
    <string name="to_group_message">You can either put this feed into or above this group. What do you want to do?</string>
    <string name="to_group_above">Above the group</string>
    <string name="to_group_into">Into the group</string>
    <string name="add_custom_feed">Custom feed</string>
    <string name="google_news_title">Google News topics</string>
    <string name="google_news_indicator">Select one or several topics to add. Some of them may not be provided by Google for your language.</string>
    <string name="google_news_top_stories">Top Stories</string>
    <string name="google_news_world">World</string>
    <string name="google_news_business">Business</string>
    <string name="google_news_technology">Technology</string>
    <string name="google_news_entertainment">Entertainment</string>
    <string name="google_news_sports">Sports</string>
    <string name="google_news_science">Science</string>
    <string name="google_news_health">Health</string>
    <string name="google_news_custom_topic">Enter custom topic</string>
    <string name="all">All</string>
    <string name="recent">Recent</string>
    <string name="later_reading">Later Reading</string>
    <string name="no_entries">No entries</string>
    <string name="favorites">Starred</string>
    <string name="context_menu_show_read">Show read entries</string>
    <string name="menu_star">Star</string>
    <string name="menu_unstar">Unstar</string>
    <string name="menu_share">Share</string>
    <string name="menu_full_screen">Full screen</string>
    <string name="menu_copy_clipboard">Copy link</string>
    <string name="menu_mark_as_unread">Mark as unread</string>
    <string name="menu_open_in_browser">Open in browser</string>
    <string name="menu_switch_full_original">Show full content</string>
    <string name="menu_save_image">Save image</string>
    <string name="copied_clipboard">Link copied</string>
    <string name="get_full_text">Retrieve the full text</string>
    <string name="see_enclosure">See enclosure</string>
    <string name="cant_open_link">No application found for this link</string>
    <string name="open_enclosure">Open enclosure</string>
    <string name="file">File</string>
    <string name="download_and_save">Download and save</string>
    <string name="open_link">Open link</string>
    <string name="tip_sentence">Tip: slide left to mark as later reading and slide right to mark as favorite</string>
    <string name="settings_category_refresh">Automated refresh</string>
    <string name="settings_refresh_enabled">Enable automatic refresh</string>
    <string name="settings_refresh_enabled_description">Enable the automatic refresh of feeds</string>
    <string name="settings_refresh_interval">Refresh interval</string>
    <string name="settings_category_content_presentation">Content presentation</string>
    <string name="settings_light_theme">Light theme</string>
    <string name="settings_light_theme_description">Use the light theme</string>
    <string name="settings_keep_time">Time that the entries will be kept</string>
    <string name="settings_display_images">Display images</string>
    <string name="settings_display_images_description">Display images in entries</string>
    <string name="settings_preload_image_mode">Preload images</string>
    <string name="settings_font_size">Text size</string>
    <string name="settings_font_serif">Use Serif Font</string>
    <string name="settings_font_serif_description">Use Serif Font instead of Sans-Serif in articles</string>
    <string name="settings_display_oldest_first">Entries order</string>
    <string name="settings_display_oldest_first_description">Display oldest entries first</string>
    <string name="settings_display_entries_fullscreen">Auto-fullscreen entries</string>
    <string name="settings_display_entries_fullscreen_description">Automatically display entries in fullscreen</string>
    <string name="settings_refresh_on_open">Refresh feeds on open</string>
    <string name="settings_refresh_on_open_description">Refreshes all feeds after opening the application</string>
    <string name="settings_refresh_wifi_only">Refresh only over Wi-Fi</string>
    <string name="settings_refresh_wifi_only_description">Automatic refresh will only be done if Wi-Fi connection is available</string>
    <string name="settings_screen_proxy">Proxy</string>
    <string name="settings_category_network">Network</string>
    <string name="settings_proxy_enabled">Enabled</string>
    <string name="settings_proxy_wifi_only">Wi-Fi only</string>
    <string name="settings_proxy_wifi_only_description">Use Proxy only for Wi-Fi</string>
    <string name="settings_proxy_host">Host</string>
    <string name="settings_proxy_port">Port</string>
    <string name="settings_proxy_type">Type</string>
    <string name="settings_backup_restore">Backup and restore</string>
    <string name="settings_backup_path">Default backup path</string>
    <string name="settings_backup">Backup</string>
    <string name="settings_backup_description">Backup all data, including feeds, filters, entries and app settings</string>
    <string name="question_backup_path_permission_title">File permission</string>
    <string name="question_backup_path_permission">As per Android\'s file permission requirements, please specify the backup path and grant permission.</string>
    <string name="settings_restore">Restore</string>
    <string name="settings_restore_description">Restoring from a backup file will overwrite all data and can not be undone</string>
    <string name="message_invalid_backup_file">The backup file is invalid!</string>
    <string name="question_restart">Do you want to restart the app to apply the changes?</string>
    <string name="settings_cache">Cache</string>
    <string name="settings_clear_image_cache">Clear old image cache</string>
    <string name="settings_clear_image_cache_description">Same as the time that the entries will be kept</string>
    <string-array name="settings_intervals">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>1 day</item>
    </string-array>
    <string-array name="settings_keep_times">
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>1 week</item>
        <item>2 weeks</item>
        <item>1 month</item>
        <item>2 months</item>
        <item>3 months</item>
        <item>6 months</item>
        <item>1 year</item>
        <item>2 years</item>
        <item>3 years</item>
        <item>Forever</item>
    </string-array>
</resources>